# sema

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  WIP.md  codecov.yml  deferred.md  dist-workspace.toml  lychee.toml  package-lock.json
benchmarks/1brc/sema-src/: .gitignore  CLAUDE.md  Cargo.toml  README.md
benchmarks/1brc/sema-src/agents/: DECISIONS.md  LIMITATIONS.md
benchmarks/1brc/sema-src/crates/sema/: Cargo.toml
benchmarks/1brc/sema-src/crates/sema-eval/: Cargo.toml
benchmarks/1brc/sema-src/crates/sema-llm/: Cargo.toml
benchmarks/1brc/sema-src/crates/sema-reader/: Cargo.toml
benchmarks/1brc/sema-src/crates/sema-stdlib/: Cargo.toml
benchmarks/1brc/sema-src/examples/: ascii-art.sema  brainfuck.sema  dsl-builder.sema  emoji.sema  json-api.sema  l-system.sema  lazy.sema  lorem-ipsum.sema  pretty-print.sema  record-types.sema  regex-toolkit.sema  scheme-basics.sema  state-machine.sema  streaming-io.sema  system-utils.sema  towers-of-hanoi.sema  unicode.sema
crates/sema/: Cargo.toml
crates/sema-core/: Cargo.toml  README.md
crates/sema-core/src/: async_signal.rs  context.rs  error.rs  home.rs  json.rs  lib.rs  output_hook.rs  resolve.rs  sandbox.rs  text_util.rs  value.rs  vfs.rs
crates/sema-dap/: Cargo.toml
crates/sema-dap/src/: lib.rs  protocol.rs  server.rs  transport.rs
crates/sema-dap/tests/: integration_test.rs
crates/sema-docs/: Cargo.toml  builtin_docs.generated.json
crates/sema-docs/entries/special-forms/: -to-gt.md  as-to-.md  async.md  await.md  case.md  defn.md  defun.md  do.md  fn.md  for-filter.md  for-fold.md  for-list.md  for-map.md  for-range.md  for.md  force.md  lambda.md  let-star.md  let.md  macroexpand.md  match.md  unless.md  when.md  while.md
crates/sema-docs/src/: lib.rs
crates/sema-docs/tests/: entry_tests.rs
crates/sema-eval/fuzz/: Cargo.toml
crates/sema-eval/fuzz/fuzz_targets/: fuzz_eval.rs
crates/sema-llm/: Cargo.toml  README.md
crates/sema-llm/src/: anthropic.rs  builtins.rs  embeddings.rs  fake.rs  gemini.rs  http.rs  lib.rs  ndjson.rs  ollama.rs  openai.rs  pricing.rs  provider.rs  sse.rs  types.rs  vector_store.rs
crates/sema-lsp/: Cargo.toml
crates/sema-lsp/src/: builtin_docs.rs  helpers.rs  lib.rs  scope.rs  server.rs  state.rs  tests.rs
crates/sema-lsp/src/handlers/: completion.rs  mod.rs  range_formatting.rs  semantic_tokens.rs  structure.rs
crates/sema-lsp/tests/: lsp_e2e_test.rs
crates/sema-lsp/tests/e2e/: conftest.py  helpers.py  pyproject.toml  test_capabilities.py  test_code_lens.py  test_completion.py  test_completion_docs.py  test_definition.py  test_diagnostics.py  test_document_highlight.py  test_document_symbols.py  test_folding_range.py  test_hover.py  test_inlay_hints.py  test_references.py  test_rename.py  test_semantic_tokens.py  test_signature_help.py
crates/sema-mcp/: Cargo.toml
crates/sema-mcp/src/: builtin_docs.rs  builtins.rs  client.rs  docs_search.rs  lib.rs  notebook.rs  protocol.rs  server.rs  tools.rs
crates/sema-mcp/src/oauth/: discovery.rs  flow.rs  login.rs  loopback.rs  mod.rs  store.rs
crates/sema-mcp/tests/: mcp_client_test.rs  mcp_http_client_test.rs  mcp_legacy_sse_test.rs  mcp_oauth_connect_test.rs  mcp_oauth_test.rs  mcp_test.rs
crates/sema-notebook/: Cargo.toml
crates/sema-notebook/src/: bridge.rs  engine.rs  format.rs  lib.rs  render.rs  server.rs  ui.rs  vfs.rs
crates/sema-notebook/src/ui/: index.html  notebook.js  style.css
crates/sema-notebook/tests/e2e/: notebook.spec.ts  package-lock.json  playwright.config.ts
crates/sema-otel/: Cargo.toml
crates/sema-otel/src/: compat.rs  imp.rs  lib.rs  noop.rs
crates/sema-otel/tests/: grpc_buildable.rs
crates/sema-reader/: Cargo.toml  README.md
crates/sema-reader/fuzz/fuzz_targets/: fuzz_read.rs
crates/sema-reader/src/: lexer.rs  lib.rs  reader.rs
crates/sema-reader/tests/: fuzz_reader.rs
crates/sema-stdlib/: Cargo.toml  README.md
crates/sema-stdlib/src/: arithmetic.rs  async_ops.rs  bitwise.rs  bytevector.rs  comparison.rs  context.rs  crypto.rs  csv_ops.rs  datetime.rs  http.rs  io.rs  json.rs  kv.rs  lib.rs  list.rs  map.rs  math.rs  meta.rs  pdf.rs  pio.rs  predicates.rs  regex_ops.rs  serial.rs  server.rs  sqlite.rs  stream.rs  string.rs  system.rs  terminal.rs  text.rs  toml_ops.rs  typed_array.rs  workflow.rs  workflow_check.rs  ws.rs
crates/sema-wasm/: Cargo.toml
crates/sema-wasm/src/: lib.rs
crates/sema-workflow/: Cargo.toml
crates/sema-workflow/src/: context.rs  event.rs  journal.rs  lib.rs
crates/sema/src/: archive.rs  colors.rs  cross_compile.rs  docs.rs  import_tracer.rs  lib.rs  main.rs  pkg.rs  web_prelude.sema  workflow_check.rs  workflow_view.rs
crates/sema/src/repl/: apropos.rs  commands.rs  completer.rs  disasm.rs  editor.rs  headless.rs  highlighter.rs  hinter.rs  history.rs  inspector.rs  mod.rs  prompt.rs  validator.rs
crates/sema/src/workflow_view/: index.html  ingest.rs
crates/sema/tests/: complete_async_test.rs  dap_async_breakpoint_test.rs  doc_examples_test.rs  dual_eval_collections_test.rs  dual_eval_core_test.rs  dual_eval_data_test.rs  dual_eval_ergonomic_test.rs  dual_eval_io_test.rs  dual_eval_map_test.rs  dual_eval_stdlib_test.rs  dual_eval_test.rs  dual_eval_types_test.rs  embed_async_otel_test.rs  embedding_bench.rs  eval_collections_test.rs  eval_core_test.rs  eval_data_test.rs  eval_ergonomic_test.rs  eval_io_test.rs  eval_map_test.rs  eval_stdlib_test.rs  eval_test.rs  eval_types_test.rs  http_test.rs  integration_test.rs  llm_fake_test.rs  llm_test.rs  mcp_builtin_test.rs  mcp_e2e_test.rs  micro_confidence_test.rs  otel_agent_test.rs  otel_error_test.rs  otel_host_nesting_test.rs  otel_llm_test.rs  otel_own_provider_test.rs  otel_tags_test.rs  pio_cross_validation_test.rs  repl_display_test.rs  serialize_roundtrip_test.rs  server_test.rs  (+6 more)
crates/sema/tests/common/: mod.rs
crates/sema/tests/e2e-workflow-view/: package-lock.json  package.json  playwright.config.ts  workflow-view.spec.ts
playground/crate/: Cargo.toml
playground/crate/src/: lib.rs
(+1180 files in other folders)
