[workspace]
members = [
    "crates/sema-core",
    "crates/sema-reader",
    "crates/sema-eval",
    "crates/sema-llm",
    "crates/sema-stdlib",
    "crates/sema",
]
resolver = "2"

[workspace.dependencies]
sema-core = { path = "crates/sema-core" }
sema-reader = { path = "crates/sema-reader" }
sema-eval = { path = "crates/sema-eval" }
sema-llm = { path = "crates/sema-llm" }
sema-stdlib = { path = "crates/sema-stdlib" }

regex = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
futures = "0.3"
rustyline = "17"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
chrono = "0.4"
csv = "1"
md5 = "0.8"
hmac = "0.12"
hex = "0.4"
memchr = "2"
lasso = "0.7"
hashbrown = "0.15"
hostname = "0.4"
libc = "0.2"

[profile.release]
debug = true
