[package]
name = "sema-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canonical structured documentation for Sema builtins/special forms; powers LSP hover/completion and REPL apropos"

# `sema-docs` is an internal build/doc-generation tool (`make docs`), not a
# user-facing program. Exclude its binary from `dist` so cargo-dist does not
# ship it via the Homebrew tap / GitHub release alongside the `sema` binary.
[package.metadata.dist]
dist = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

[[bin]]
name = "sema-docs"
path = "src/main.rs"
