[package]
name = "sema-llm"
version = "1.5.0"
edition = "2021"

[dependencies]
sema-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
base64.workspace = true
sha2.workspace = true
