[package]
name = "sema-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol server for Sema"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-eval.workspace = true
tower-lsp.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "sync"] }
serde.workspace = true
serde_json.workspace = true
