[package]
name = "sema-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Sema"

[dependencies]
sema-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
