[package]
name = "sema-otel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenTelemetry GenAI tracing facade for the Sema runtime"

[features]
# In-process span capture for deterministic tests (pulls the SDK's in-memory
# exporter). Enabled by downstream crates as a dev-dependency feature.
testing = ["opentelemetry_sdk/testing"]

[dependencies]
sema-core = { workspace = true }
serde_json = { workspace = true }

# OTel is native-only — mirrors the sema-llm wasm exclusion. On wasm32 the facade
# compiles to no-op spans and links none of the export machinery (Decision #11).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = [
    "trace",
    "metrics",
    # Async-runtime span processor + metric reader, used ONLY for the gRPC (tonic)
    # OTLP path (tonic needs a live tokio reactor; the thread-based processors used
    # for HTTP do not). rt-tokio pulls in the runtime::Tokio glue.
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "metrics",
    "http-proto",
    "http-json",
    "reqwest-blocking-client",
    "grpc-tonic",
] }
opentelemetry-semantic-conventions = { version = "0.32", features = [
    "semconv_experimental",
] }
# A live tokio reactor is needed ONLY to construct the gRPC (tonic) exporter.
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
opentelemetry_sdk = { version = "0.32", features = ["trace", "metrics", "testing"] }
