[package]
name = "sema-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lexer and s-expression parser for the Sema programming language"

[dependencies]
sema-core.workspace = true

[dev-dependencies]
proptest = "1.10.0"
