[package]
name = "sema-stdlib"
version = "0.3.0"
edition = "2021"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
rand.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
chrono.workspace = true
csv.workspace = true
md5.workspace = true
hmac.workspace = true
hex.workspace = true
memchr.workspace = true
lasso.workspace = true
hashbrown.workspace = true
