[package]
name = "sema-stdlib"
version = "1.2.2"
edition = "2021"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
regex.workspace = true
serde_json.workspace = true
rand.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
chrono.workspace = true
csv.workspace = true
md5.workspace = true
hmac.workspace = true
hex.workspace = true
memchr.workspace = true
lasso.workspace = true
hashbrown.workspace = true
unicode-normalization.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
reqwest.workspace = true
hostname.workspace = true
libc.workspace = true
