[package]
name = "sema-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standard library (350+ native functions) for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-otel.workspace = true
regex.workspace = true
serde_json.workspace = true
rand.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
chrono.workspace = true
csv.workspace = true
md5.workspace = true
hmac.workspace = true
hex.workspace = true
hashbrown.workspace = true
unicode-normalization.workspace = true
caseless.workspace = true
glob.workspace = true
toml.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sema-workflow.workspace = true
sema-llm.workspace = true
tokio.workspace = true
reqwest.workspace = true
hostname.workspace = true
libc.workspace = true
pdf-extract.workspace = true
lopdf.workspace = true
axum.workspace = true
tokio-stream.workspace = true
futures.workspace = true
# WebSocket client (ws/*). rustls (not native-tls) to match reqwest's TLS stack
# and avoid pulling a second stack for wss:// — webpki-roots bundles CA roots so
# there is no system dependency.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
mime_guess.workspace = true
rusqlite.workspace = true
serialport = "4"
