[package]
name = "sema-wasm"
version = "1.4.0"
edition = "2021"
description = "WebAssembly bindings for the Sema Lisp interpreter"
repository = "https://github.com/HelgeSverre/sema"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sema-core = { path = "../sema-core" }
sema-reader = { path = "../sema-reader" }
sema-eval = { path = "../sema-eval" }
sema-stdlib = { path = "../sema-stdlib" }
js-sys = "0.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "js"] }
