[package]
name = "sema-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for the Sema Lisp interpreter"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sema-core = { path = "../sema-core" }
sema-reader = { path = "../sema-reader" }
sema-eval = { path = "../sema-eval" }
sema-stdlib = { path = "../sema-stdlib" }
sema-fmt = { path = "../sema-fmt" }
js-sys = "0.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "AbortController",
    "AbortSignal",
] }
