[package]
name = "sema"
version = "1.2.2"
edition = "2021"

[[bin]]
name = "sema"
path = "src/main.rs"

[lib]
name = "sema"
path = "src/lib.rs"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-eval.workspace = true
sema-llm.workspace = true
sema-stdlib.workspace = true
rustyline.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
