[package]
name = "sema-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sema — a Lisp dialect with first-class LLM primitives"
readme = "../../README.md"
keywords = ["lisp", "language", "llm", "interpreter", "repl"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "sema"
path = "src/main.rs"

[lib]
name = "sema"
path = "src/lib.rs"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-eval.workspace = true
sema-vm.workspace = true
sema-llm.workspace = true
sema-stdlib.workspace = true
rustyline.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
libsui = "0.13"
toml.workspace = true
toml_edit.workspace = true
reqwest.workspace = true
sha2.workspace = true
semver.workspace = true
tar.workspace = true
flate2.workspace = true
crc32fast = "1"

[dev-dependencies]
paste = "1"
reqwest.workspace = true
serde_json.workspace = true
tungstenite = "0.28"
