[package]
name = "sema-wasm"
version = "0.9.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sema-core = { path = "../../crates/sema-core" }
sema-reader = { path = "../../crates/sema-reader" }
sema-eval = { path = "../../crates/sema-eval" }
sema-stdlib = { path = "../../crates/sema-stdlib" }
js-sys = "0.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "js"] }
