[package]
name = "sema-eval-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sema-core]
path = "../../sema-core"

[dependencies.sema-reader]
path = "../../sema-reader"

[dependencies.sema-eval]
path = ".."

[dependencies.sema-stdlib]
path = "../../sema-stdlib"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
doc = false
