[package]
name = "sema-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sema-reader]
path = ".."

[dependencies.sema-core]
path = "../../sema-core"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_read"
path = "fuzz_targets/fuzz_read.rs"
doc = false

[[bin]]
name = "fuzz_read_many"
path = "fuzz_targets/fuzz_read_many.rs"
doc = false
